# owntone-server

./: .clang-format  .gitignore  .markdownlintrc  .travis.yml  404.html  AUTHORS  CREDITS  ChangeLog  Doxyfile  INSTALL  INSTALL.md  Makefile.am  NEWS  PR_BODY.md  README  README.md  README_ALSA.md  README_COMPILATIONS.md  README_JSON_API.md  README_PLAYER_WEBINTERFACE.md  README_PULSE.md  README_RADIO_STREAMS.md  README_SMARTPL.md  TODO  UPGRADING  build.sh  configure.ac  configure.in  forked-daapd.8  forked-daapd.conf  forked-daapd.conf.in  forked-daapd.service  forked-daapd.service.in  forked-daapd.spec.in  index.html  mkdeb.sh.templ  mkdist.sh  mkdist.sh.templ  mkdocs-serve.sh  mkdocs.sh  (+14 more)
admin-root/: CREDITS  Makefile.am  about.html  apache-2.0.html  aspl-license.html  aspl-license.txt  config-update.html  config.html  config.js  config.xml  feedback.html  firefly.css  ftr.html  gpl-license.html  hdr.html  index.html  mt-daapd.css  no_access.html  playlist.html  playlist.js  smart.html  smart.js  smartpopup.html  status.html  status.js  thanks.html  upnp-basic.xml  upnp-cd.xml  upnp-cm.xml  util.js
admin-root/lib-js/: Makefile.am  rico.js
admin-root/lib-js/script.aculo.us/: Makefile.am
contrib/: .gitignore  Makefile.am  README  mt-daapd  mt-daapd-gentoo  mt-daapd-ssc.pl  mt-daapd-ssc.sh  mt-daapd.conf  mt-daapd.conf.templ  mt-daapd.fc2.spec  mt-daapd.fc3.spec  mt-daapd.playlist  mt-daapd.posix.spec  mt-daapd.spec  sqlite.sql
contrib/debian/: changelog
contrib/init.d/: .gitignore  Makefile.am  mt-daapd-gentoo.templ  mtdaapd-bsd
htdocs/: .gitignore  Makefile.am  admin.html  index.html  site.webmanifest
htdocs/admin/js/: forked-daapd.js
htdocs/assets/: ContentWithHeading.js  ContentWithHero.js  ControlDropdown.js  CoverArtwork.js  GroupByList.js  IndexButtonList.js  ListAlbums.js  ListArtists.js  ListComposers.js  ListGenres.js  ListItemAlbumSpotify.js  ListItemPlaylistSpotify.js  ListPlaylists.js  ListTracks.css  ListTracks.js  ModalDialogAlbum.js  ModalDialogAlbumSpotify.js  ModalDialogArtist.js  ModalDialogArtistSpotify.js  ModalDialogComposer.js  ModalDialogGenre.js  ModalDialogPlaylist.js  ModalDialogPlaylistSpotify.js  ModalDialogQueueItem.js  ModalDialogTrackSpotify.js  PageAbout.js  PageAlbum.js  PageAlbumSpotify.js  PageAlbums.js  PageArtist.js  PageArtistSpotify.js  PageArtistTracks.js  PageArtists.js  PageAudiobooksAlbum.js  PageAudiobooksAlbums.js  PageAudiobooksArtist.js  PageAudiobooksArtists.js  PageAudiobooksGenres.js  PageComposerAlbums.js  PageComposerTracks.js  (+36 more)
htdocs/css/: app.css  app.css.map  bulma.min.css  forked-daapd.css
htdocs/js/: app.js  app.js.map  forked-daapd.js  manifest.js.map  vendor.js.map
htdocs/player/css/: app.css  app.css.map  chunk-vendors.css  chunk-vendors.css.map
htdocs/player/fonts/: materialdesignicons-webfont.dbcb3fe.eot
htdocs/player/js/: app-legacy.js  app-legacy.js.map  app.js  app.js.map  chunk-vendors-legacy.js  chunk-vendors-legacy.js.map  chunk-vendors.js  chunk-vendors.js.map  manifest.js  manifest.js.map  vendor.js  vendor.js.map
src/: .gitignore  DAAP.g  DAAP2SQL.g  Makefile  Makefile.am  RSP.g  RSP2SQL.g  SMARTPL.g  SMARTPL2SQL.g  artwork.c  artwork.h  artwork_cache.c  artwork_cache.h  artwork_legacy.c  atoll.c  atoll.h  avio_evbuffer.c  avio_evbuffer.h  bag.c  bag.h  bsd-snprintf.c  bsd-snprintf.h  cache.c  cache.h  cast.c  cast.h  cast_channel.pb-c.c  commands.c  commands.h  compat.c  compat.h  conf.c  conf.h  conffile.c  conffile.h  config-driver.c  config.c  config.h  config.mk  configfile.c  (+272 more)
src/avl/: README  avl.c
src/evhttp/: evhttp.h  evhttp_compat.c  evhttp_compat.h  http-internal.h  http.c  log.c  strlcpy-internal.h  strlcpy.c
src/evrtsp/: evrtsp.h  rtsp-internal.h  rtsp-libevent1.c  rtsp-libevent20.c  rtsp.c
src/inputs/: file.c  file_http.c  http.c  pipe.c  spotify.c  spotify.h  spotify_librespotc.c  spotify_libspotify.c  spotify_spotifyc.c  timer.c
src/inputs/librespot-c/: .gitignore  Makefile.am  README.md  configure.ac  librespot-c.h
src/inputs/libspotify/: libspotify.c  libspotify.h
src/inputs/spotifyc/: channel.c  connection.c  crypto.c  spotifyc-internal.h  spotifyc.c  spotifyc.h
src/libairptp/: .gitignore  LICENSE  Makefile.am  README.md  airptp.h  configure.ac
src/libairptp/daemon/: .gitignore  Makefile.am  airptpd.c  airptpd.service.in
src/libairptp/src/: Makefile.am  airptp.c  airptp_internal.h  daemon.c  daemon.h  msg_handle.c  msg_handle.h  ptp_definitions.h  ptp_msg_handle.c  ptp_msg_handle.h  utils.c  utils.h
src/libairptp/tests/: .gitignore  Makefile.am  client.c  daemon.c  test1.c
src/mdns/: DNSCommon.c  Responder.c  mDNS.c  mDNSClientAPI.h  mDNSDebug.h  mDNSPlatformFunctions.h  mDNSPosix.c  mDNSPosix.h  mDNSUNP.c  mDNSUNP.h
src/outputs/: airplay.c  airplay_events.c  airplay_events.h  alsa.c  cast.c  cast_channel.pb-c.c  cast_channel.pb-c.h  cast_channel.v0.pb-c.c  dummy.c  fifo.c  pair-internal.h  pair.c  pair.h  pair_fruit.c  pair_homekit.c  pipewire.c  plist_wrap.h  pulse.c  raop.c  raop_verification.c  raop_verification.h  rcp.c  rtp_common.c  rtp_common.h  streaming.c  streaming.h  volume_mapping.c
src/pair_ap/: pair-internal.h  pair-tlv.c  pair-tlv.h  pair.c  pair.h  pair_fruit.c  pair_homekit.c
src/parsers/: .gitignore  daap_lexer.l  daap_parser.y  mpd_lexer.l  mpd_parser.y  rsp_lexer.l  rsp_parser.y  smartpl_lexer.l  smartpl_parser.y
src/plugins/: Makefile.am  compat.c  mtd-plugins.h  out-daap-db.c  out-daap-db.h  out-daap-proto.c  out-daap-proto.h  out-daap.c  out-daap.h  rsp.c  rsp.h  ssc-ffmpeg.c  ssc-script.c  ssc-wma.cpp  w32-event.c  xml-rpc.c  xml-rpc.h
web-src/: .browserslistrc  .env.development  .eslintrc.cjs  .eslintrc.js  .gitignore  MIGRATION_VUE3.md  Makefile  Makefile.am  Makefile.in  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vue.config.js
web-src/config/: index.js  prod.env.js
web-src/public/: index.html  site.webmanifest
web-src/src/: App.vue  audio.js  i18n.js  icons.js  main.js  mystyles.css  mystyles.scss  styles.scss
web-src/src/api/: configuration.js  index.js  player.js  (+6 more)
(+691 files in other folders)
